--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@ import * as ReactDOM from 'react-dom';
 import {AppContainer} from 'react-hot-loader';
 
 let render = () => {
-  const { App } = require('./app');
+  const { App } = require('./electron-browser/components/app');
   ReactDOM.render(<AppContainer><App /></AppContainer>, document.getElementById('App'));
 }
 
